# roboat_ros2

./: .gitignore  .gitmodules  README.md  mypy.ini  package.xml  setup.cfg  setup.py
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
roboat_interfaces/: CMakeLists.txt  package.xml
roboat_interfaces/msg/: GPSInfo.msg
roboat_localization/: LICENSE  package.xml  setup.cfg  setup.py
roboat_localization/roboat_localization/: localization.py
roboat_localization/roboat_localization/params/: navsat_transform.yaml
roboat_perception/: package.xml  setup.py
roboat_perception/roboat_perception/: gps.py  radio.py
roboat_perception/roboat_perception/lib/: depacketizer.py  packet.py
src/roboat_interfaces/: CMakeLists.txt  package.xml
src/roboat_perception/: package.xml  setup.cfg  setup.py
src/roboat_perception/roboat_perception/: dtp.py  gps.py  imu.py  motor.py  radio.py  recorder.py  sliplib.py  test_listener.py
src/roboat_perception/roboat_perception/data/: dtp.py
src/roboat_perception/test/: test_djb2.py  test_fnv1a.py  test_mypy.py
src/roboat_thinking/: README.md  package.xml  setup.cfg  setup.py
src/roboat_thinking/roboat_thinking/: msg_decoder.py  recorder.py
