<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboat_perception</name>
  <version>0.0.0</version>
  <description>Roboats Sensors and Perception</description>
  <maintainer email="dylan@starink.com">Dylan Starink</maintainer>
  <license>MIT</license>
  
  <depend>protobuf-dev</depend>

  <depend>python3-sparkfun-ublox-gps-pip</depend>
  <depend>python3-spidev-pip</depend>
  <depend>python3-adafruit-circuitpython-bno055-pip</depend>
  <depend>python-bitstring-pip</depend>
  <depend>python3-protobuf</depend>
  <depend>python3-bitstring</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_mypy</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
